--- a/style.css
+++ b/style.css
@@ -229,11 +229,14 @@ body {
     height: 25px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.3);
-    top: 265px;
-    left: -15px;
+    top: 550px; /* немного ниже */
+    left: 39%; /* немного правее */
+    transform: translateX(-50%) translateY(10px); /* сдвигаем влево и немного вниз */
     animation: scale 3s linear infinite;
     z-index: -1;
 }
+
+
 
 @keyframes scale {
     0%,
