--- a/style.css
+++ b/style.css
@@ -229,9 +229,9 @@ body {
     height: 25px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.3);
-    top: 550px; /* немного ниже */
-    left: 39%; /* немного правее */
-    transform: translateX(-50%) translateY(10px); /* сдвигаем влево и немного вниз */
+    top: 550px; 
+    left: 39%; 
+    transform: translateX(-50%) translateY(10px); 
     animation: scale 3s linear infinite;
     z-index: -1;
 }
@@ -247,3 +247,4 @@ body {
         transform: scaleX(0.85);
     }
 }
+
